更新了一些前端

--- a/Sign/static/css/index.css
+++ b/Sign/static/css/index.css
@@ -19,3 +19,11 @@
     font-family:"华文中宋";
     color:rgb(255, 11, 11);
 }
+
+.container .row .caption .btn-success{
+    float:left;
+}
+
+.container .row .caption .btn-warning{
+    float:right;
+}
