--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -48,10 +48,11 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1">
+                        <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_1_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_1_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_1_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><strong class="info" id="movie_show_1_title">{{movie_show_1_title}}</strong></a><br>
                             <strong class="info" id="movie_show_1_score">豆瓣评分：{{movie_show_1_score}}</strong><br>
@@ -63,10 +64,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2">
+                        <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_2_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_2_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_2_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><strong class="info" id="movie_show_2_title">{{movie_show_2_title}}</strong></a><br>
                             <strong class="info" id="movie_show_2_score">豆瓣评分：{{movie_show_2_score}}</strong><br>
@@ -78,10 +80,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3">
+                        <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_3_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_3_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_3_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><strong class="info" id="movie_show_3_title">{{movie_show_3_title}}</strong></a><br>
                             <strong class="info" id="movie_show_3_score">豆瓣评分：{{movie_show_3_score}}</strong><br>
@@ -93,10 +96,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4">
+                        <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_4_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_4_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_4_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><strong class="info" id="movie_show_4_title">{{movie_show_4_title}}</strong></a><br>
                             <strong class="info" id="movie_show_4_score">豆瓣评分：{{movie_show_4_score}}</strong><br>
@@ -108,10 +112,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5">
+                        <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_5_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_5_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_5_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><strong class="info" id="movie_show_5_title">{{movie_show_5_title}}</strong></a><br>
                             <strong class="info" id="movie_show_5_score">豆瓣评分：{{movie_show_5_score}}</strong><br>
@@ -123,10 +128,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6">
+                        <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_6_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_6_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_6_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><strong class="info" id="movie_show_6_title">{{movie_show_6_title}}</strong></a><br>
                             <strong class="info" id="movie_show_6_score">豆瓣评分：{{movie_show_6_score}}</strong><br>
@@ -140,10 +146,11 @@
             <div class="row">
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7">
+                        <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_7_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_7_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_7_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><strong class="info" id="movie_show_7_title">{{movie_show_7_title}}</strong></a><br>
                             <strong class="info" id="movie_show_7_score">豆瓣评分：{{movie_show_7_score}}</strong><br>
@@ -155,10 +162,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8">
+                        <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_8_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_8_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_8_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><strong class="info" id="movie_show_8_title">{{movie_show_8_title}}</strong></a><br>
                             <strong class="info" id="movie_show_8_score">豆瓣评分：{{movie_show_8_score}}</strong><br>
@@ -170,10 +178,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9">
+                        <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_9_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_9_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_9_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><strong class="info" id="movie_show_9_title">{{movie_show_9_title}}</strong></a><br>
                             <strong class="info" id="movie_show_9_score">豆瓣评分：{{movie_show_9_score}}</strong><br>
@@ -185,10 +194,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10">
+                        <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_10_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_10_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_10_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><strong class="info" id="movie_show_10_title">{{movie_show_10_title}}</strong></a><br>
                             <strong class="info" id="movie_show_10_score">豆瓣评分：{{movie_show_10_score}}</strong><br>
@@ -200,10 +210,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11">
+                        <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_11_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_11_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_11_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><strong class="info" id="movie_show_11_title">{{movie_show_11_title}}</strong></a><br>
                             <strong class="info" id="movie_show_11_score">豆瓣评分：{{movie_show_11_score}}</strong><br>
@@ -215,10 +226,11 @@
                 </div>
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
-                        <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12">
+                        <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12"></a>
                         <div class="caption">
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_12_id}})">我喜欢</button>&nbsp;
+                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_12_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_12_id}})">我看过</button>
+                            <br>
                             <br>
                             <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><strong class="info" id="movie_show_12_title">{{movie_show_12_title}}</strong></a><br>
                             <strong class="info" id="movie_show_12_score">豆瓣评分：{{movie_show_12_score}}</strong><br>
