--- a/Sign/templates/User.html
+++ b/Sign/templates/User.html
@@ -67,7 +67,7 @@
                         <p class="info_3">无结果</p>
                     </div>
                     {% endfor %}
-                    </div>>
+                    </div>
                 </div>
             <br>
             <div id = "Favourite_zone">
@@ -97,7 +97,7 @@
                         <p class="info_3">无结果</p>
                     </div>
                     {% endfor %}
-                    </div>>
+                    </div>
                 </div>
             <br>
             <div id = "Recommand_zone">
@@ -127,7 +127,7 @@
                         <p class="info_3">无结果</p>
                     </div>
                     {% endfor %}
-                    </div>>
+                    </div>
                 </div>
         </div>
     </body>
