--- a/Sign/templates/Search_user.html
+++ b/Sign/templates/Search_user.html
@@ -16,14 +16,17 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/index/">
-                        <img src="../static/image/logo.png" alt="Brand" class="img-circle img-responsive">
+                        <img src="{{user_url}}" alt="Brand" class="img-circle img-responsive">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
+                            <li>
+                                <a class="tips" id="user" href="/user/{{now_user}}">{{now_user}}</a>
+                            </li>
                             {% include 'Navigation.html' %}
                             <li>
-                                <a href="{{sign_in}}" class="tips">登录</a>
+                                <a type="button" href="{{index}}" class="tips" onclick="postLogOut()">注销</a>
                             </li>
                             <li>
                                 <a href="{{sign_up}}" class="tips">注册</a>
