--- a/Sign/static/css/index.css
+++ b/Sign/static/css/index.css
@@ -20,15 +20,10 @@
     color:rgb(255, 11, 11);
 }
 
-.container .row .btn-success{
+.container .row .caption .btn-success{
     float:left;
 }
 
-<<<<<<< HEAD
 .container .row .caption .btn-warning{
     float: right;;
-=======
-.container .row .btn-warning{
-    float:right;
->>>>>>> 360e257282a72fa111665dca624ef18967a9a5fb
 }
