--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -49,8 +49,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_1_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_1_id}})">我看过</button>
                             <br>
@@ -66,8 +65,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_2_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_2_id}})">我看过</button>
                             <br>
@@ -83,8 +81,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_3_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_3_id}})">我看过</button>
                             <br>
@@ -100,8 +97,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_4_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_4_id}})">我看过</button>
                             <br>
@@ -117,8 +113,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_5_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_5_id}})">我看过</button>
                             <br>
@@ -134,8 +129,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_6_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_6_id}})">我看过</button>
                             <br>
@@ -153,8 +147,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_7_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_7_id}})">我看过</button>
                             <br>
@@ -170,8 +163,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_8_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_8_id}})">我看过</button>
                             <br>
@@ -187,8 +179,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_9_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_9_id}})">我看过</button>
                             <br>
@@ -204,8 +195,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_10_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_10_id}})">我看过</button>
                             <br>
@@ -221,8 +211,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_11_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_11_id}})">我看过</button>
                             <br>
@@ -238,8 +227,7 @@
                 <div class="col-sm-4 col-md-2">
                     <div class="thumbnail">
                         <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12"></a>
-                        <div>
-                            <br>
+                        <div class="caption">
                             <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_12_id}})">我喜欢</button>
                             <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_12_id}})">我看过</button>
                             <br>
