--- a/Sign/templates/Index_User.html
+++ b/Sign/templates/Index_User.html
@@ -51,8 +51,11 @@
                         <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><img src="../static/items/{{movie_show_1}}" alt="movie_1" title="{{movie_show_1_title}}" id="movie_show_1"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_1_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_1_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_1_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_1_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_1_id}}" id="movie_show_1_id"><strong class="info" id="movie_show_1_title">{{movie_show_1_title}}</strong></a><br>
@@ -68,8 +71,11 @@
                         <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><img src="../static/items/{{movie_show_2}}" alt="movie_2" title="{{movie_show_2_title}}" id="movie_show_2"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_2_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_2_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_2_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_2_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_2_id}}" id="movie_show_2_id"><strong class="info" id="movie_show_2_title">{{movie_show_2_title}}</strong></a><br>
@@ -85,8 +91,11 @@
                         <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><img src="../static/items/{{movie_show_3}}" alt="movie_3" title="{{movie_show_3_title}}" id="movie_show_3"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_3_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_3_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_3_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_3_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_3_id}}" id="movie_show_3_id"><strong class="info" id="movie_show_3_title">{{movie_show_3_title}}</strong></a><br>
@@ -102,8 +111,11 @@
                         <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><img src="../static/items/{{movie_show_4}}" alt="movie_4" title="{{movie_show_4_title}}" id="movie_show_4"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_4_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_4_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_4_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_4_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_4_id}}" id="movie_show_4_id"><strong class="info" id="movie_show_4_title">{{movie_show_4_title}}</strong></a><br>
@@ -119,8 +131,11 @@
                         <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><img src="../static/items/{{movie_show_5}}" alt="movie_5" title="{{movie_show_5_title}}" id="movie_show_5"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_5_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_5_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_5_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_5_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_5_id}}" id="movie_show_5_id"><strong class="info" id="movie_show_5_title">{{movie_show_5_title}}</strong></a><br>
@@ -136,8 +151,11 @@
                         <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><img src="../static/items/{{movie_show_6}}" alt="movie_6" title="{{movie_show_6_title}}" id="movie_show_6"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_6_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_6_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_6_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_6_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_6_id}}" id="movie_show_6_id"><strong class="info" id="movie_show_6_title">{{movie_show_6_title}}</strong></a><br>
@@ -155,8 +173,11 @@
                         <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><img src="../static/items/{{movie_show_7}}" alt="movie_7" title="{{movie_show_7_title}}" id="movie_show_7"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_7_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_7_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_7_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_7_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_7_id}}" id="movie_show_7_id"><strong class="info" id="movie_show_7_title">{{movie_show_7_title}}</strong></a><br>
@@ -172,8 +193,11 @@
                         <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><img src="../static/items/{{movie_show_8}}" alt="movie_8" title="{{movie_show_8_title}}" id="movie_show_8"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_8_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_8_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_8_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_8_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_8_id}}" id="movie_show_8_id"><strong class="info" id="movie_show_8_title">{{movie_show_8_title}}</strong></a><br>
@@ -189,8 +213,11 @@
                         <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><img src="../static/items/{{movie_show_9}}" alt="movie_9" title="{{movie_show_9_title}}" id="movie_show_9"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_9_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_9_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_9_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_9_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_9_id}}" id="movie_show_9_id"><strong class="info" id="movie_show_9_title">{{movie_show_9_title}}</strong></a><br>
@@ -206,8 +233,11 @@
                         <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><img src="../static/items/{{movie_show_10}}" alt="movie_10" title="{{movie_show_10_title}}" id="movie_show_10"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_10_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_10_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_10_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_10_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_10_id}}" id="movie_show_10_id"><strong class="info" id="movie_show_10_title">{{movie_show_10_title}}</strong></a><br>
@@ -223,8 +253,11 @@
                         <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><img src="../static/items/{{movie_show_11}}" alt="movie_11" title="{{movie_show_11_title}}" id="movie_show_11"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_11_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_11_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_11_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_11_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_11_id}}" id="movie_show_11_id"><strong class="info" id="movie_show_11_title">{{movie_show_11_title}}</strong></a><br>
@@ -240,8 +273,11 @@
                         <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><img src="../static/items/{{movie_show_12}}" alt="movie_12" title="{{movie_show_12_title}}" id="movie_show_12"></a>
                         <div>
                             <br>
-                            <button class="btn btn-success btn-sm" onclick="postLike({{movie_show_12_id}})">我喜欢</button>
-                            <button class="btn btn-warning btn-sm" onclick="postSeen({{movie_show_12_id}})">我看过</button>
+                            <form action="#" method="POST">
+                                {% csrf_token %}
+                                <button type='button' class="btn btn-success btn-sm" onclick="postLike('{{movie_show_12_title}}')">我喜欢</button>
+                                <button type='button' class="btn btn-warning btn-sm" onclick="postSeen('{{movie_show_12_title}}')">我看过</button>
+                            </form>
                             <br>
                             <br>
                             <a href="../movie/{{movie_show_12_id}}" id="movie_show_12_id"><strong class="info" id="movie_show_12_title">{{movie_show_12_title}}</strong></a><br>
