--- a/Sign/templates/User.html
+++ b/Sign/templates/User.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>User</title>
+        <title>{{now_title}}</title>
         <link type="text/css" rel="stylesheet" href="../static/css/bootstrap.min.css">
         <link type="text/css" rel="stylesheet" href="../static/css/another.css">
         <link type="text/css" rel="stylesheet" href="../static/css/index.css">
