--- a/Sign/templates/User.html
+++ b/Sign/templates/User.html
@@ -39,13 +39,14 @@
             </div>
         </nav>
         <div class="container" id="center4">
-            <h1 class="" id="user">{{now_user}}</h1>
-            <br>
-            <div id = "Seen_zone">
-                <h3>我看过的</h3>
-                <div id = "Seen_Movie"></div>
+            <div class="row">
+                <h1 class="" id="user"><strong>{{now_user}}</strong></h1>
             </div>
-            <div class="container" id="center4">
+            <hr>
+            <div id = "Seen_zone">
+                <div class="row">
+                    <h3><strong>我看过的</strong></h3>
+                </div>
                 <div class="row">
                 {% for movie in seen_movie_list %}
                     <div class="col-sm-4 col-md-2">
@@ -59,21 +60,20 @@
                             </div>
                         </div>
                     </div>
-                {% if forloop.counter|divisibleby:5 %}
+                {% if forloop.counter|divisibleby:6 %}
                 </div>
                 <div class="row">
                 {% endif %}
                 {% empty %}
-                <p class="info_1">无结果</p>
+                <h4>无结果</h4>
                 {% endfor %}
                 </div>
             </div>
-            <br>
+            <hr>
             <div id = "Favourite_zone">
-                <h3>我喜欢看的</h3>
-                <div id = "Like_Movie"></div>
-            </div>
-            <div class="container" id="center4">
+                <div class="row">
+                    <h3><strong>我喜欢看的</strong></h3>
+                </div>
                 <div class="row">
                 {% for movie in favourite_movie_list %}
                     <div class="col-sm-4 col-md-2">
@@ -87,21 +87,20 @@
                             </div>
                         </div>
                     </div>
-                {% if forloop.counter|divisibleby:5 %}
+                {% if forloop.counter|divisibleby:6 %}
                 </div>
                 <div class="row">
                 {% endif %}
                 {% empty %}
-                <p class="info_1">无结果</p>
+                <h4>无结果</h4>
                 {% endfor %}
                 </div>
             </div>
-            <br>
+            <hr>
             <div id = "Recommand_zone">
-                <h3>为你推荐</h3>
-                <div id = "Recommand_Movie"></div>
-            </div>
-            <div class="container" id="center4">
+                <div class="row">
+                    <h3><strong>为你推荐</strong></h3>
+                </div>
                 <div class="row">
                 {% for movie in recommand_movie_list %}
                     <div class="col-sm-4 col-md-2">
@@ -115,12 +114,12 @@
                             </div>
                         </div>
                     </div>
-                {% if forloop.counter|divisibleby:5 %}
+                {% if forloop.counter|divisibleby:6 %}
                 </div>
                 <div class="row">
                 {% endif %}
                 {% empty %}
-                <p class="info_1">无结果</p>
+                <h4>无结果</h4>
                 {% endfor %}
                 </div>
             </div>
